sandbox/ingress-controllers/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  namespace: sandbox
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /message-management-service
            pathType: Prefix
            backend:
              service:
                name: sandbox-message-management-service
                port:
                  number: 8081
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: worker-service-service
                port:
                  number: 8082 
#         - path: /worker-service
#            pathType: Prefix
#            backend:
#              service:
#                name: worker-service-service
#                port:
#                  number: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /console/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
